# entrega_metodos_aprendizaje_automatico

./: .gitignore  main.py  pyproject.toml
entrega_2/: entraga_2.ipynb  pyvenv.cfg
entrega_3/: actividad3.ipynb  pyproject.toml
proyecto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
