[project]
name = "entrega-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "missingno>=0.5.2",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pyod>=2.0.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
